--- a/fe_2d_axi.ipynb
+++ b/fe_2d_axi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "4166f221-4165-46e3-8748-a52c1089e962",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,12 @@
       " [0.   0.1 ]\n",
       " [0.05 0.1 ]\n",
       " [0.1  0.1 ]]\n",
+      "Node  0  fixed on y\n",
+      "Node  1  fixed on y\n",
+      "Node  2  fixed on y\n",
+      "Node  6  vel on y\n",
+      "Node  7  vel on y\n",
+      "Node  8  vel on y\n",
       "vel [[0. 0.]\n",
       " [0. 0.]\n",
       " [0. 0.]\n",
@@ -54,83 +60,208 @@
       "NODAL  mass (FROM AVG):  8.722222222222223\n",
       "vel after bc [[ 0.  0.]\n",
       " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]\n",
       " [ 0. -1.]\n",
       " [ 0. -1.]\n",
-      " [ 0.  0.]\n",
-      " [ 0.  0.]\n",
-      " [ 0.  0.]\n",
-      " [ 0.  0.]\n",
-      " [ 0.  0.]]\n",
+      " [ 0. -1.]]\n",
       "Time:  0.0\n",
+      "Time:  8e-06\n",
+      "Time:  1.6e-05\n",
+      "Time:  2.4e-05\n",
+      "Time:  3.2e-05\n",
+      "Time:  3.9999999999999996e-05\n",
+      "Time:  4.7999999999999994e-05\n",
+      "Time:  5.599999999999999e-05\n",
+      "Time:  6.4e-05\n",
+      "Time:  7.2e-05\n",
+      "Time:  8e-05\n",
+      "Time:  8.800000000000001e-05\n",
+      "Time:  9.600000000000002e-05\n",
+      "Time:  0.00010400000000000002\n",
+      "Time:  0.00011200000000000003\n",
+      "Time:  0.00012000000000000003\n",
+      "Time:  0.00012800000000000002\n",
+      "Time:  0.00013600000000000003\n",
+      "Time:  0.00014400000000000003\n",
+      "Time:  0.00015200000000000004\n",
+      "Time:  0.00016000000000000004\n",
+      "Time:  0.00016800000000000004\n",
+      "Time:  0.00017600000000000005\n",
+      "Time:  0.00018400000000000005\n",
+      "Time:  0.00019200000000000006\n",
+      "Time:  0.00020000000000000006\n",
+      "Time:  0.00020800000000000007\n",
+      "Time:  0.00021600000000000007\n",
+      "Time:  0.00022400000000000008\n",
+      "Time:  0.00023200000000000008\n",
+      "Time:  0.0002400000000000001\n",
+      "Time:  0.00024800000000000007\n",
+      "Time:  0.00025600000000000004\n",
+      "Time:  0.000264\n",
+      "Time:  0.000272\n",
+      "Time:  0.00028\n",
+      "Time:  0.00028799999999999995\n",
+      "Time:  0.00029599999999999993\n",
+      "Time:  0.0003039999999999999\n",
+      "Time:  0.0003119999999999999\n",
+      "Time:  0.00031999999999999986\n",
+      "Time:  0.00032799999999999984\n",
+      "Time:  0.0003359999999999998\n",
+      "Time:  0.0003439999999999998\n",
+      "Time:  0.0003519999999999998\n",
+      "Time:  0.00035999999999999975\n",
+      "Time:  0.00036799999999999973\n",
+      "Time:  0.0003759999999999997\n",
+      "Time:  0.0003839999999999997\n",
+      "Time:  0.00039199999999999966\n",
+      "Time:  0.00039999999999999964\n",
+      "Time:  0.0004079999999999996\n",
+      "Time:  0.0004159999999999996\n",
+      "Time:  0.00042399999999999957\n",
+      "Time:  0.00043199999999999955\n",
+      "Time:  0.00043999999999999953\n",
+      "Time:  0.0004479999999999995\n",
+      "Time:  0.0004559999999999995\n",
+      "Time:  0.00046399999999999946\n",
+      "Time:  0.00047199999999999944\n",
+      "Time:  0.0004799999999999994\n",
+      "Time:  0.0004879999999999994\n",
+      "Time:  0.0004959999999999994\n",
+      "Time:  0.0005039999999999993\n",
+      "Time:  0.0005119999999999993\n",
+      "Time:  0.0005199999999999993\n",
+      "Time:  0.0005279999999999993\n",
+      "Time:  0.0005359999999999993\n",
+      "Time:  0.0005439999999999992\n",
+      "Time:  0.0005519999999999992\n",
+      "Time:  0.0005599999999999992\n",
+      "Time:  0.0005679999999999992\n",
+      "Time:  0.0005759999999999991\n",
+      "Time:  0.0005839999999999991\n",
+      "Time:  0.0005919999999999991\n",
+      "Time:  0.0005999999999999991\n",
+      "Time:  0.0006079999999999991\n",
+      "Time:  0.000615999999999999\n",
+      "Time:  0.000623999999999999\n",
+      "Time:  0.000631999999999999\n",
+      "Time:  0.000639999999999999\n",
+      "Time:  0.0006479999999999989\n",
+      "Time:  0.0006559999999999989\n",
+      "Time:  0.0006639999999999989\n",
+      "Time:  0.0006719999999999989\n",
+      "Time:  0.0006799999999999989\n",
+      "Time:  0.0006879999999999988\n",
+      "Time:  0.0006959999999999988\n",
+      "Time:  0.0007039999999999988\n",
+      "Time:  0.0007119999999999988\n",
+      "Time:  0.0007199999999999987\n",
+      "Time:  0.0007279999999999987\n",
+      "Time:  0.0007359999999999987\n",
+      "Time:  0.0007439999999999987\n",
+      "Time:  0.0007519999999999987\n",
+      "Time:  0.0007599999999999986\n",
+      "Time:  0.0007679999999999986\n",
+      "Time:  0.0007759999999999986\n",
+      "Time:  0.0007839999999999986\n",
+      "Time:  0.0007919999999999985\n",
+      "Time:  0.0007999999999999985\n",
+      "Time:  0.0008079999999999985\n",
+      "Time:  0.0008159999999999985\n",
+      "Time:  0.0008239999999999985\n",
+      "Time:  0.0008319999999999984\n",
+      "Time:  0.0008399999999999984\n",
+      "Time:  0.0008479999999999984\n",
+      "Time:  0.0008559999999999984\n",
+      "Time:  0.0008639999999999983\n",
+      "Time:  0.0008719999999999983\n",
+      "Time:  0.0008799999999999983\n",
+      "Time:  0.0008879999999999983\n",
+      "Time:  0.0008959999999999983\n",
+      "Time:  0.0009039999999999982\n",
+      "Time:  0.0009119999999999982\n",
+      "Time:  0.0009199999999999982\n",
+      "Time:  0.0009279999999999982\n",
+      "Time:  0.0009359999999999981\n",
+      "Time:  0.0009439999999999981\n",
+      "Time:  0.0009519999999999981\n",
+      "Time:  0.0009599999999999981\n",
+      "Time:  0.000967999999999998\n",
+      "Time:  0.000975999999999998\n",
+      "Time:  0.0009839999999999981\n",
+      "Time:  0.000991999999999998\n",
+      "Time:  0.000999999999999998\n",
       "END\n",
       "DISPLACEMENTS\n",
-      " [[ 0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.49642619e-06  0.00000000e+00]\n",
-      " [-2.91368849e-06 -8.00000000e-06]\n",
-      " [ 0.00000000e+00 -8.00000000e-06]\n",
-      " [ 2.91368849e-06  2.84335755e-07]\n",
-      " [-5.82737698e-07 -3.21209043e-06]\n",
-      " [ 5.82737698e-07 -3.21209043e-06]\n",
-      " [-2.91368849e-06 -4.94623734e-06]\n",
-      " [ 0.00000000e+00  0.00000000e+00]]\n",
+      " [[ 0.        0.      ]\n",
+      " [      nan  0.      ]\n",
+      " [      nan  0.      ]\n",
+      " [      nan       nan]\n",
+      " [      nan       nan]\n",
+      " [      nan       nan]\n",
+      " [      nan -0.001008]\n",
+      " [      nan -0.001008]\n",
+      " [      nan -0.001008]]\n",
       "VEL\n",
-      " [[ 0.          0.        ]\n",
-      " [ 0.77143127  0.        ]\n",
-      " [-0.64285939 -1.        ]\n",
-      " [ 0.         -1.        ]\n",
-      " [ 0.64285939  0.0627342 ]\n",
-      " [-0.12857188 -0.70869707]\n",
-      " [ 0.12857188 -0.70869707]\n",
-      " [-0.64285939 -1.09130923]\n",
-      " [ 0.          0.        ]]\n",
+      " [[ 0.  0.]\n",
+      " [nan  0.]\n",
+      " [nan  0.]\n",
+      " [nan nan]\n",
+      " [nan nan]\n",
+      " [nan nan]\n",
+      " [nan -1.]\n",
+      " [nan -1.]\n",
+      " [nan -1.]]\n",
       "ACC\n",
-      " [[      0.               0.        ]\n",
-      " [  83852.42816723       0.        ]\n",
-      " [ -69877.02347269       0.        ]\n",
-      " [     -0.               0.        ]\n",
-      " [  69877.02347269    6819.0324031 ]\n",
-      " [ -13975.40469454  -77033.39576414]\n",
-      " [  13975.40469454  -77033.39576414]\n",
-      " [ -69877.02347269 -118622.26995941]\n",
-      " [     -0.              -0.        ]]\n",
+      " [[ 0.  0.]\n",
+      " [nan  0.]\n",
+      " [nan  0.]\n",
+      " [nan nan]\n",
+      " [nan nan]\n",
+      " [nan nan]\n",
+      " [nan  0.]\n",
+      " [nan  0.]\n",
+      " [nan  0.]]\n",
       "STRESS\n",
-      "[[[[ -9507692.30769231   6338461.53846154         0.        ]\n",
-      "   [  6338461.53846154 -22184615.38461538         0.        ]\n",
-      "   [        0.                 0.          -9507692.30769231]]]\n",
+      "[[[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[  9507692.3076923   -6338461.53846154         0.        ]\n",
-      "   [ -6338461.53846154  22184615.38461538         0.        ]\n",
-      "   [        0.                 0.           9507692.3076923 ]]]\n",
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[  9507692.30769231   6338461.53846154         0.        ]\n",
-      "   [  6338461.53846154  22184615.38461538         0.        ]\n",
-      "   [        0.                 0.           9507692.30769231]]]\n",
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[        0.                 0.                 0.        ]\n",
-      "   [        0.                 0.                 0.        ]\n",
-      "   [        0.                 0.                 0.        ]]]]\n",
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]]\n",
       "TAU\n",
-      "[[[[ 4225641.02564103  6338461.53846154        0.        ]\n",
-      "   [ 6338461.53846154 -8451282.05128205        0.        ]\n",
-      "   [       0.                0.          4225641.02564103]]]\n",
+      "[[[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[-4225641.02564102 -6338461.53846154        0.        ]\n",
-      "   [-6338461.53846154  8451282.05128205        0.        ]\n",
-      "   [       0.                0.         -4225641.02564102]]]\n",
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[-4225641.02564103  6338461.53846154        0.        ]\n",
-      "   [ 6338461.53846154  8451282.05128205        0.        ]\n",
-      "   [       0.                0.         -4225641.02564103]]]\n",
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]\n",
       "\n",
       "\n",
-      " [[[       0.                0.                0.        ]\n",
-      "   [       0.                0.                0.        ]\n",
-      "   [       0.                0.                0.        ]]]]\n"
+      " [[[nan nan nan]\n",
+      "   [nan nan nan]\n",
+      "   [nan nan nan]]]]\n"
      ]
     }
    ],
@@ -150,33 +281,29 @@
     "dom.mat_rho = 7850.0\n",
     "\n",
     "dom.calcMatConst()\n",
-    "dX = 0.05\n",
+    "dx = 0.05\n",
     "#def addBoxLength(self, lx, ly, le):\n",
     "dom.addBoxLength(0.1,0.1,dx)  #(self, ex, ey, le):\n",
     "\n",
     "for i in range (dom.node_count):\n",
     "\n",
-    "    if (dom_d.x[i,1]<dx/4.0):\n",
+    "    if (dom.x[i,1]<dx/4.0):\n",
     "        dom.is_fix[i,1] = True\n",
     "        print(\"Node \", i, \" fixed on y\")\n",
-    "    if (dom_d.x[i,1]>0.1-dx/4.0): \n",
-    "        dom.is_bcv[2:4,1] = True\n",
-    "        dom.bcv   [2:4,1] = -1.0\n",
-    "        print(\"Node \", i, \" fixed on y\")\n",
+    "    if (dom.x[i,1]>0.1-dx/4.0): \n",
+    "        dom.is_bcv[i,1] = True\n",
+    "        dom.bcv   [i,1] = -1.0\n",
+    "        print(\"Node \", i, \" vel on y\")\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#AFTER CREATE\n",
     "dom.is_fix[0,:] = True\n",
-    "dom.is_fix[1,1] = True\n",
-    "\n",
-    "dom.is_bcv[2:4,1] = True\n",
-    "dom.bcv   [2:4,1] = -1.0\n",
     "\n",
     "print (\"vel\", dom.v)\n",
     "tf = 1.0*dt\n",
-    "#tf = 1.0e-3\n",
+    "tf = 1.0e-3\n",
     "dom.solve(tf, dt)"
    ]
   },
