--- a/static/shell_20_mitc.ipynb
+++ b/static/shell_20_mitc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "cefa614a-6fb6-4858-90fb-90e7aae0c1f9",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4186595.45720868 -1532400.2927069  -1121794.87179487 -1532400.2927069 ]\n",
-      " [-1532400.2927069   2243589.74358974   410605.42091203 -1121794.87179487]\n",
-      " [-1121794.87179487   410605.42091203   300584.02997081   410605.42091203]\n",
-      " [-1532400.2927069  -1121794.87179487   410605.42091203  2243589.74358974]]\n",
-      "[[ 2243589.74358974 -1532400.2927069  -1121794.87179487   410605.42091203]\n",
-      " [-1532400.2927069   4186595.45720868 -1532400.2927069  -1121794.87179487]\n",
-      " [-1121794.87179487 -1532400.2927069   2243589.74358974   410605.42091203]\n",
-      " [  410605.42091203 -1121794.87179487   410605.42091203   300584.02997081]]\n",
-      "[[  300584.02997081   410605.42091203 -1121794.87179487   410605.42091203]\n",
-      " [  410605.42091203  2243589.74358974 -1532400.2927069  -1121794.87179487]\n",
-      " [-1121794.87179487 -1532400.2927069   4186595.45720868 -1532400.2927069 ]\n",
-      " [  410605.42091203 -1121794.87179487 -1532400.2927069   2243589.74358974]]\n",
-      "[[ 2243589.74358974   410605.42091203 -1121794.87179487 -1532400.2927069 ]\n",
-      " [  410605.42091203   300584.02997081   410605.42091203 -1121794.87179487]\n",
-      " [-1121794.87179487   410605.42091203  2243589.74358974 -1532400.2927069 ]\n",
-      " [-1532400.2927069  -1121794.87179487 -1532400.2927069   4186595.45720868]]\n",
-      "Displacements: [    0.             0.             0.             0.\n",
-      "     0.             0.             0.             0.\n",
-      "     0.             0.           480.73469388 -3700.79300292\n",
-      " -5445.90087464  4181.52769679  4678.63556851  -767.26530612\n",
-      "     0.             0.             0.             0.        ]\n"
+      "Displacements: [   0.            0.            0.            0.            0.\n",
+      "    0.            0.            0.            0.            0.\n",
+      "   48.07346939 -370.07930029 -544.59008746  418.15276968  467.86355685\n",
+      "  -76.72653061    0.            0.            0.            0.        ]\n"
      ]
     }
    ],
@@ -127,6 +110,7 @@
     "    # Bending stiffness contribution with MITC\n",
     "    K_b = np.dot(B_b.T, np.dot(D_b, B_b)) * thickness\n",
     "    return K_b\n",
+    "    \n",
     "def compute_shear_stiffness(N, dN_dxi, dN_deta, material_properties, thickness):\n",
     "    E, nu = material_properties\n",
     "    # Shear modulus (assuming isotropic material)\n",
@@ -147,8 +131,6 @@
     "    K_s = k_shear * np.dot(S.T, np.dot(G, S)) * thickness\n",
     "    return K_s\n",
     "\n",
-    "\n",
-    "# Compute the global stiffness matrix\n",
     "def compute_stiffness_matrix(nodes, material_properties):\n",
     "    \"\"\"Assembly of stiffness matrix for the MITC4 shell element\"\"\"\n",
     "    # Initialize the global stiffness matrix for a shell element with 5 DOFs per node (20 DOFs)\n",
@@ -162,30 +144,26 @@
     "        N, dN_dxi, dN_deta = shape_functions(xi, eta)\n",
     "\n",
     "        # Compute membrane stiffness (based on shape functions, material properties)\n",
-    "        K_m = compute_membrane_stiffness(N, dN_dxi, dN_deta, material_properties,t)\n",
+    "        K_m = compute_membrane_stiffness(N, dN_dxi, dN_deta, material_properties, t)\n",
     "\n",
     "        # Compute bending stiffness (based on rotation and bending shape functions)\n",
-    "        K_b = compute_bending_stiffness(N, dN_dxi, dN_deta, material_properties,t)\n",
+    "        K_b = compute_bending_stiffness(N, dN_dxi, dN_deta, material_properties, t)\n",
     "\n",
     "        # Compute shear stiffness (modified shape functions for MITC shear correction)\n",
-    "        K_s = compute_shear_stiffness(N, dN_dxi, dN_deta, material_properties,t)\n",
+    "        K_s = compute_shear_stiffness(N, dN_dxi, dN_deta, material_properties, t)\n",
     "\n",
     "        # Assemble into the global stiffness matrix\n",
-    "        # Since this is a 4-node element with 5 DOFs per node, we need to add to the correct DOFs in the global matrix\n",
-    "        # (this step assumes you are assembling into the correct degrees of freedom)\n",
-    "        K_total[0:8, 0:8] += K_m\n",
-    "        \n",
-    "        # Bending DOFs (8 DOFs for bending)\n",
+    "        # Add contributions to the correct DOFs in the global matrix\n",
+    "        # Membrane and bending stiffness contributions go into the appropriate blocks\n",
+    "        K_total[0:8, 0:8] += K_m  # Membrane stiffness (8x8)\n",
     "        K_total[8:16, 8:16] += K_b  # Bending stiffness (8x8)\n",
-    "        \n",
-    "        # Shear DOFs (8 DOFs for shear)\n",
-    "        K_total[16:20, 16:20] += K_s  # Shear stiffness (8x8)\n",
-    "    \n",
+    "        K_total[16:20, 16:20] += K_s  # Shear stiffness (4x4)\n",
+    "\n",
     "    return K_total\n",
     "\n",
     "# Define the load vector (simple example, add forces to specific nodes)\n",
     "F = np.zeros(20)  # Load vector for 20 DOFs\n",
-    "F[12] = -100  # Force at node 3 (e.g., applied in the z direction)\n",
+    "F[12] = -10  # Force at node 3 (e.g., applied in the z direction)\n",
     "\n",
     "# Boundary conditions (fix some nodes)\n",
     "fixed_dofs = np.array([0, 1, 2, 3, 4, 5,6,7,8,9])  # Fix all DOFs at node 0\n",
